# gmock-helloworld

./: .gitignore  CMakeLists.txt  README.md  index.html  main.cc  params.json  pre-build.sh
Test/: CMakeLists.txt  main.cc  test.cc
